crates/swc/tests/tsc-references/objectLiteralShorthandPropertiesFunctionArgument2.2.minified.js
//// [objectLiteralShorthandPropertiesFunctionArgument2.ts]
 // error
